Python 04: Fix typo

--- a/python/04-neural-networks/neural-networks.ipynb
+++ b/python/04-neural-networks/neural-networks.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Klasifikace obrázků oblečení pomocí neuronových sítí\n",
     "\n",
-    "Dataset jsou 32x32 obrázky, které vznikly úpravou obrázků z tohoto (datasetu)[https://www.kaggle.com/datasets/zalando-research/fashionmnist]. Příznaky jsou jednotlivé pixely a **label**.\n",
+    "Dataset jsou 32x32 obrázky, které vznikly úpravou obrázků z tohoto [datasetu](https://www.kaggle.com/datasets/zalando-research/fashionmnist). Příznaky jsou jednotlivé pixely a **label**.\n",
     "\n",
     "Dataset si připravím a pak provedu klasifikaci pomocí dopředných a konvolučních neuronových sítí. Budu experimentovat s hloubkou a šířkou sítí, s různými metodami regularizace a vyzkouším i různé optimizery.\n",
     "\n",
