Python 01: Add link to dataset

--- a/python/01-binary-classification/binary-classification.ipynb
+++ b/python/01-binary-classification/binary-classification.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Titanic\n",
     "\n",
-    "Data si připravím a potom použiji rozhodovací strom a metodu nejbližších sousedů k predikci, zda pasažéři na Titanicu přežili, nebo ne.\n",
+    "[Data](https://www.openml.org/d/40945) si připravím a potom použiji rozhodovací strom a metodu nejbližších sousedů k predikci, zda pasažéři na Titanicu přežili, nebo ne.\n",
     "\n",
     "Dataset má následující příznaky:\n",
     "\n",
